fix alignment for navigation

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,9 @@ hr {
 	padding-left: 0px;
 }
 
+.introspeakers {
+	margin-bottom: 60px;
+}
 
 
 /*-----------------------------------------------------------------------------
